--- a/manifest.json
+++ b/manifest.json
@@ -5,21 +5,21 @@
   "description": "Save, organize, and revisit your favorite YouTube video moments with timestamped clips.",
 
   "icons": {
-    "16": "icon-16.png",
-    "32": "icon-32.png",
-    "48": "icon-48.png",
-    "128": "icon-128.png"
+    "16": "/icons/icon-16.png",
+    "32": "/icons/icon-32.png",
+    "48": "/icons/icon-48.png",
+    "128": "/icons/icon-128.png"
   },
 
   "permissions": ["activeTab", "scripting", "storage"],
 
-  "action": { "default_popup": "popup.html" },
+  "action": { "default_popup": "/popup/index.html" },
 
   "content_scripts": [
     {
       "matches": ["https://www.youtube.com/*", "https://youtube.com/*"],
-      "js": ["content.js"],
-      "css": ["content.css"]
+      "js": ["/content/script.js"],
+      "css": ["/content/styles.css"]
     }
   ],
 
