Project name changed (1 change)

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 3,
-  "name": "Epoclip: YouTube Timestamp Saver",
+  "name": "Epoclip: Mine",
   "version": "1.0",
   "description": "Save, organize, and revisit your favorite YouTube video moments with timestamped clips.",
 
